# remolder

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-04-25-063928_create_files/: up.sql
src/: lib.rs  main.rs  utils.rs
src/db/: files.rs  mod.rs  models.rs  schema.rs
src/models/: api.rs  api_message.rs  mime.rs  mod.rs  storage.rs
src/routes/: download.rs  index.rs  mod.rs  upload.rs
templates/: download-failure.html.hbs  head.html.hbs  header.html.hbs  index.html.hbs  upload.html.hbs
