[package]
name = "remolder"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "remolder"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "sqlite"] }
dotenv = "0.15"
md5 = "0.7"
rand = "0.8"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "tera_templates"] }
rocket-multipart-form-data = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
